[gd_scene load_steps=2 format=3 uid="uid://cirl81llkniv"]

[ext_resource type="Script" path="res://Levels.gd" id="1_vbskv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbskv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_right = 24.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Levels"

[node name="Level 1" type="Button" parent="CanvasLayer/Label"]
layout_mode = 0
offset_left = -157.0
offset_top = 123.0
offset_right = -120.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 50
text = "1"

[node name="Level 2" type="Button" parent="CanvasLayer/Label"]
layout_mode = 0
offset_left = -15.0
offset_top = 117.0
offset_right = 22.0
offset_bottom = 194.0
theme_override_font_sizes/font_size = 50
text = "2"

[node name="Level 3" type="Button" parent="CanvasLayer/Label"]
layout_mode = 0
offset_left = 164.0
offset_top = 129.0
offset_right = 201.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 50
text = "3"

[node name="Level 4" type="Button" parent="CanvasLayer/Label"]
layout_mode = 0
offset_left = 295.0
offset_top = 132.0
offset_right = 332.0
offset_bottom = 209.0
theme_override_font_sizes/font_size = 50
text = "4
"

[connection signal="pressed" from="CanvasLayer/Label/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Label/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Label/Level 3" to="." method="_on_level_3_pressed"]
